# draco

./: CHANGELOG.md  Cargo.toml  README.md  bench.js
.github/workflows/: ci.yml  release.yml
crates/draco-cli/: Cargo.toml
crates/draco-cli/src/: heavy_local.rs  main.rs  mcp.rs  serve.rs
crates/draco-cli/src/serve/: batch.rs  crawl.rs  diagnostics.rs  discover.rs  interact.rs  jobs.rs  map.rs  mod.rs  search.rs  webhook.rs
crates/draco-cli/tests/: cli.rs  e2e_markdown.rs  e2e_tier2.rs  extract_e2e.rs  interact_act_e2e.rs  interact_cookie_e2e.rs
crates/draco-cli/tests/fixtures/search/: baidu.html  bing.html  brave.html  ddg.html  mojeek.html  zapmeta.html
crates/draco-core/: Cargo.toml
crates/draco-core/src/: challenge.rs  chunk_cache.rs  fetcher.rs  interact.rs  lib.rs  machine.rs  prewarm.rs  ranking.rs  testutil.rs  tier2.rs
crates/draco-heavy/: Cargo.toml
crates/draco-heavy/src/: browser.rs  config.rs  discovery.rs  double_tap.rs  lib.rs  local.rs  main.rs  proxy.rs  server.rs  slots.rs  stubs.rs  wire.rs
crates/draco-heavy/src/pipe/: browser.rs  leak.rs  mod.rs  namespace.rs  namespace_stub.rs  socks.rs  upstream.rs
crates/draco-jail/: Cargo.toml
crates/draco-jail/src/: degraded.rs  frame.rs  level.rs  lib.rs  linux.rs  payload.rs  runtime_payload.rs
crates/draco-jail/src/linux/: seccomp.rs
crates/draco-net/: Cargo.toml
crates/draco-net/src/: lib.rs
crates/draco-net/tests/: pooling.rs
crates/draco-runtime/: Cargo.toml  build.rs
crates/draco-runtime/js/: base.iife.js  fake-indexeddb.iife.js  glue.js  happydom.iife.js  interceptor.js  polyfill.js  polyfills.js  prelude.js  runtime_coverage.js
crates/draco-runtime/src/: lib.rs  session.rs
crates/draco-runtime/tests/: capture.rs  chaser_repro.rs  dom_globals.rs  esm_dyn.rs  interact_session.rs  memory_bounds.rs  response_bridge.rs  runtime_coverage.rs
crates/draco-runtime/tests/common/: mod.rs
crates/draco-runtime/tests/fixtures/: framework_scheduler.html  no_fetch.html  poison_then_fetch.html  spa_decoy.html  spa_fetch.html  spa_xhr.html  throws.html  vue_app.html  webapi_hydrate.html
crates/draco-static/: Cargo.toml
crates/draco-static/src/: content.rs  extract_schema.rs  lib.rs
crates/draco-static/tests/: content_fixtures.rs  extraction.rs
crates/draco-static/tests/fixtures/: jsonld_product.html  next_app_router.html  next_pages.html  nuxt_factory.html  nuxt_object.html  plain_spa.html
crates/draco-static/tests/fixtures/content/: article_boilerplate.html  docs_code.html  gfm_rich.html  links_images.html  script_noise.html
crates/draco-types/: Cargo.toml
crates/draco-types/src/: lib.rs
docs/: BARE_METAL_VALIDATION.md  ROADMAP.md  SANDBOX.md  TIER2_MEMORY_RESULTS.md  firecrawl-api-reference.md
docs/superpowers/plans/: 2026-07-15-render-memory-reliability-plan.md
scripts/: gate.sh  reclaim.sh
tests/: profile_spa_memory.sh  test_live.sh
tests/fixtures/: plateau_data.json  plateau_tier2.html
