[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.13.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Draco — browserless, tiered data-extraction engine."

[workspace.dependencies]
# Third-party (shared)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Internal crates (path deps — the frozen dependency graph)
draco-types = { path = "crates/draco-types" }
draco-net = { path = "crates/draco-net" }
draco-static = { path = "crates/draco-static" }
draco-jail = { path = "crates/draco-jail" }
draco-runtime = { path = "crates/draco-runtime" }
draco-core = { path = "crates/draco-core" }

[profile.release]
opt-level = 3
lto = "thin"
