[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.17.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Draco — browserless, tiered data-extraction engine."

[workspace.dependencies]
# Third-party (shared)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Internal crates (path deps — the frozen dependency graph)
draco-types = { path = "crates/draco-types" }
draco-net = { path = "crates/draco-net" }
draco-static = { path = "crates/draco-static" }
draco-runtime = { path = "crates/draco-runtime" }
draco-core = { path = "crates/draco-core" }

[profile.release]
opt-level = 3
lto = "thin"

# --- Disk-footprint controls (see docs/SANDBOX.md) ---
# The dev/test/clippy artifact tree is dominated by debuginfo. Full DWARF for a
# workspace that links V8/deno_core/oxc/BoringSSL across many `--all-targets`
# test binaries runs to several GiB of `target/` — the recurring cause of
# sandbox ENOSPC (disk-full) session loss. Line-tables keep readable panic and
# backtrace file:line for our own crates; dropping dependency debuginfo entirely
# (we rarely step into deps) reclaims the bulk. Both are reversible per-dev and
# safe on macOS/Linux alike. `test` inherits these from `dev`.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
