[package]
name = "draco-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Draco command-line interface."

[[bin]]
name = "draco"
path = "src/main.rs"

[features]
# DEFAULT ON. Forwards to `draco-core/tier2`, which pulls in the jail + runtime
# (deno_core/V8). With `--no-default-features` the CLI builds V8-free: the
# `__jail` re-exec hook and the Tier 2 branch compile out, and Tier 2 finalizes
# `Unsupported`. Both configurations MUST build (canonical §4).
default = ["tier2", "serve"]
tier2 = ["draco-core/tier2"]
# DEFAULT ON. `draco serve` — the persistent daemon with the Firecrawl-compatible
# REST API (axum). Independent of `tier2`: a lean serve build (`--no-default-features
# --features serve`) exposes the same API with the ladder capped at the static
# tiers. `--no-default-features` drops both, keeping the minimal CLI axum-free.
serve = [
    "dep:axum",
    "dep:serde",
    "dep:draco-net",
    "dep:url",
    "dep:regex",
    "tokio/net",
    "tokio/signal",
    "tokio/sync",
    "tokio/io-std",
    "tokio/io-util",
    "tokio/time",
]

# draco-core is brought in as a DIRECT path dep (not `workspace = true`) with
# default-features off, so the CLI's own `tier2` feature is the single switch that
# turns Tier 2 (and V8) on or off end-to-end. (Cargo ignores `default-features`
# on an inherited `workspace = true` dep unless the workspace entry sets it; a
# direct path dep honours it and keeps this change local to the CLI manifest.)
# With `--no-default-features` the CLI's `tier2` is off ⇒ draco-core is built
# without `tier2` ⇒ no draco-jail/draco-runtime ⇒ V8-free.
[dependencies]
draco-core = { path = "../draco-core", default-features = false }
draco-types = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
# WS-D adds: serde_json_path (for --extract) per canonical doc §12 & §14.
serde_json_path = "0.7"
# `serve` feature: the daemon's HTTP layer + map/crawl discovery + MCP.
axum = { version = "0.8", optional = true }
serde = { workspace = true, optional = true }
draco-net = { workspace = true, optional = true }
url = { version = "2", optional = true }
# `crawl`'s includePaths/excludePaths regex matching (Firecrawl v1 semantics).
# Already resolves to v1.12.x transitively via draco-core/serde_json_path;
# declared directly (not `workspace = true` — there is no workspace entry)
# to mirror how the other `serve`-only deps above are gated.
regex = { version = "1", optional = true }

[dev-dependencies]
# Router-level tests drive handlers via `oneshot` (no sockets).
tower = { version = "0.5", features = ["util"] }
