[package]
name = "draco-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Escalation state machine, ranking, and replay orchestrator for Draco."

[features]
# DEFAULT ON. Gates the Tier 2 (runtime interception) wiring: the in-process V8
# capture seam and the ladder's Tier 2 branch. Enabling it pulls in the OPTIONAL
# `draco-runtime` dep (and, transitively, deno_core/V8). Turning it OFF
# (`--no-default-features`) yields a lean, V8-free build in which the Tier 2
# branch finalizes `Unsupported` with a "built without tier2" note — so both
# configurations compile (canonical §4).
default = ["tier2"]
# `dep:tokio` gives the production capture seam `spawn_blocking` (the ladder runs
# under the caller's multi-thread runtime; the V8 capture — a `!Send` isolate with
# its own current-thread runtime — goes off-worker) and the `Semaphore` bounding
# the daemon pool's concurrent isolates.
tier2 = [
    "dep:draco-runtime",
    "dep:tokio",
]

# The dependency graph is frozen here even though the skeleton does not yet call
# every crate; WS-C wires Tier 0/1 (net + static), Tier 2 wires the in-process
# runtime. draco-runtime is OPTIONAL: it is only compiled when the `tier2`
# feature turns it on, keeping the lean build free of V8.
[dependencies]
draco-types = { workspace = true }
draco-net = { workspace = true }
draco-static = { workspace = true }
draco-runtime = { workspace = true, optional = true }

# WS-C additions:
#   serde_json  — parse Tier 1 `_next/data` JSON bodies; carry `data: Value`.
#   url         — origin/path parsing for challenge detection & ranking policy.
#   async-trait — object-safe async `PageFetcher` seam so the ladder is mockable offline.
serde_json = { workspace = true }
url = "2"
async-trait = "0.1"
# tier2-only: the production capture seam offloads the (blocking, `!Send`) V8
# capture onto `tokio::task::spawn_blocking` ("rt"), and the daemon's Tier2Pool
# bounds concurrent isolates with a `Semaphore` ("sync"). Optional + tier2-gated
# so the lean build does not require a tokio dependency here.
tokio = { workspace = true, optional = true, features = ["rt", "sync"] }

[dev-dependencies]
# Drive the async ladder in unit tests. draco-core is the (all-platform)
# orchestrator, so a normal tokio runtime is appropriate here.
tokio = { workspace = true }
# Build `HtmlResponse { body: Bytes, .. }` fixtures in the mock PageFetcher.
bytes = { workspace = true }
