[package]
name = "draco-heavy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-browser fallback daemon for Draco."

[[bin]]
name = "draco-heavy"
path = "src/main.rs"

[features]
default = []
# Linux-box daemon plumbing. The portable in-process local fallback deliberately
# excludes netns/tun2socks/relay concerns and builds without axum.
pipe = ["dep:axum", "tokio/net", "tokio/signal"]

[dependencies]
axum = { version = "0.8", optional = true }
chaser-oxide = "0.2.4"
clap = { workspace = true, features = ["env"] }
futures = "0.3"
draco-static = { workspace = true }
draco-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "time"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
