[package]
name = "draco-jail"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandbox supervisor + jailed child (netns/Landlock/seccomp) for Draco."

[dependencies]
# Portable: the frozen wire contract + the IPC frame codec (spec §6).
draco-types = { workspace = true }
# Tier 2 (Slice 4): the jailed child hosts the V8 capture runtime. draco-jail is
# itself an OPTIONAL, tier2-gated dependency of draco-core/draco-cli (canonical
# §4), so pulling deno_core/V8 in transitively here only ever compiles into the
# build when `tier2` is enabled upstream — the `--no-default-features` lean build
# never reaches this crate at all.
draco-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Async IPC transport (Option B): tokio::net::UnixStream + the async frame codec
# so the child runs a reactor and the supervisor serves concurrently. Portable
# (the child + supervisor run on macOS too). `net` = UnixStream, `io-util` =
# AsyncRead/WriteExt, `sync` = oneshot/Mutex for the request/reply correlation,
# `time` = per-fetch timeouts.
tokio = { workspace = true, features = ["net", "io-util", "sync", "time"] }

# Linux-only jail mechanics (spec §7 & §14). cfg-gated so non-Linux hosts build
# the isolate-mode path without pulling these in.
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5.0"
landlock = "0.4.5"
nix = { version = "0.31.3", features = ["socket", "process", "sched", "resource", "fs", "user"] }
libc = "0.2.186"

# Non-Linux unix (macOS, …): the isolate-mode supervisor spawn forks + re-execs
# `draco __jail` and dup2()s the IPC socket onto fd 3 with raw libc calls. Only
# `libc` is needed here — there is no OS sandbox to arm.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2.186"
