[package]
name = "draco-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tier 2 V8 isolate + interceptor runtime for Draco."

[dependencies]
draco-types = { workspace = true }

# Tier 2 (Slice 3): V8 isolate + fetch/XHR interception.
# deno_core 0.406.0 ships a prebuilt V8; confirmed to build in-sandbox.
deno_core = "0.406.0"
# JsErrorBox is deno_core's op error type; pinned to match deno_core 0.406.0.
deno_error = "=0.7.1"
# futures::task primitives for the manual event-loop driver.
futures = "0.3"
# The isolate runs in-process and does real async network I/O: its script/chunk
# load ops `.await` the caller's `draco-net`-backed fetcher, and deno_core's timer
# reactor is tokio-based. So `run_capture` drives the event loop on a *current-thread*
# runtime built with `enable_all()` — current-thread because `JsRuntime` is `!Send`
# (deno_core's async-op driver task also requires a current-thread runtime), and the
# full driver set ("net" provides the I/O reactor the fetches need; "time" backs
# op_sleep). See lib.rs module docs.
tokio = { version = "1", features = ["rt", "net", "time", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
# build.rs bakes the base + happy-dom IIFE bundles into a V8 startup snapshot so
# each isolate restores the DOM engine in ~ms instead of re-parsing ~2.6 MB of JS.
deno_core = "0.406.0"

[dev-dependencies]
# Tests drive `run_capture` directly against in-repo HTML fixtures.
